Audio Player Library Updated