@@ -12,8 +12,6 @@ plugins {
     alias(libs.plugins.buildkonfig)
     alias(libs.plugins.ksp)
     alias(libs.plugins.room)
-    id("com.vanniktech.maven.publish") version "0.29.0"
-    id("com.google.osdetector") version "1.7.3"
 }
 
 kotlin {
@@ -78,20 +76,7 @@ kotlin {
         desktopMain.dependencies {
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutines.swing)
-            val fxSuffix = when (osdetector.classifier) {
-                "linux-x86_64" -> "linux"
-                "linux-aarch_64" -> "linux-aarch64"
-                "windows-x86_64" -> "win"
-                "osx-x86_64" -> "mac"
-                "osx-aarch_64" -> "mac-aarch64"
-                else -> throw IllegalStateException("Unknown OS: ${osdetector.classifier}")
-            }
-            implementation("org.openjfx:javafx-base:19:${fxSuffix}")
-            implementation("org.openjfx:javafx-graphics:19:${fxSuffix}")
-            implementation("org.openjfx:javafx-controls:19:${fxSuffix}")
-            implementation("org.openjfx:javafx-swing:19:${fxSuffix}")
-            implementation("org.openjfx:javafx-web:19:${fxSuffix}")
-            implementation("org.openjfx:javafx-media:19:${fxSuffix}")
+            implementation(libs.vlcj)
         }
 
         dependencies {
@@ -162,18 +147,4 @@ buildkonfig {
             "CLOUD_TEXT_TO_SPEECH_API_KEY", localProperties["CLOUD_TEXT_TO_SPEECH_API_KEY"]?.toString() ?: "",
         )
     }
-}
-
-task("testClasses") {}
-tasks.withType<JavaExec> {
-    jvmArgs = listOf(
-        "--add-modules",
-        "javafx.controls,javafx.fxml",
-        "--add-opens",
-        "javafx.graphics/javafx.scene=ALL-UNNAMED",
-        "--add-opens",
-        "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
-        "--add-opens",
-        "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED"
-    )
 }
